---------------------
- latest version for WoW classic (era)
----------------------