@@ -1,7 +1,7 @@
 ## Author: kaybe
 ## DefaultState: enabled
 ## LoadOnDemand: 0
-## Interface: 11307
+## Interface: 20501
 ## Notes: Shaman totem bar
 ## Notes-deDE: Totemleiste
 ## OptionalDeps: Masque
